Bug 457166 - Conversation links in GMail Inbox do not expose an action, cannot be activated by screen readers, r=marcoz, aaronlev